apps/base/gatus/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gatus
  labels:
    homelab.io/app: "true"
