apps/base/gatus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gatus
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: gatus
  type: ClusterIP
